Started work on webpages

--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -6,13 +6,13 @@
 <main>
   <div class="indexTopBar">
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
-    <h1>Scheduling</h1>
-    <a href="/dataView" role="button">View Data</a>
+    <h1>Data</h1>
+    <a href="/dataEdit" role="button">Edit Data</a>
   </div>
 </main>
 <!-- /Main Site -->
 
-<script src="/js/index.js"></script>
+<script src="/js/dataView.js"></script>
 
 <!-- include footer -->
 <%- include('include/_footer') %>
