--- a/views/dataEdit.ejs
+++ b/views/dataEdit.ejs
@@ -6,13 +6,12 @@
 <main>
   <div class="indexTopBar">
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
-    <h1>Scheduling</h1>
-    <a href="/dataView" role="button">View Data</a>
+    <h1>Edit Data</h1>
   </div>
 </main>
 <!-- /Main Site -->
 
-<script src="/js/index.js"></script>
+<script src="/js/dataEdit.js"></script>
 
 <!-- include footer -->
 <%- include('include/_footer') %>
