--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -9,6 +9,10 @@
     <h1>Data</h1>
     <a href="/dataEdit" role="button">Edit Data</a>
   </div>
+  <div class="box">
+    <h1>stuff</h1>
+    <select></select>
+  </div>
 </main>
 <!-- /Main Site -->
 
