--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,15 @@
 /* styling for the authentication page */
 
+.box {
+  background-color: #08769b;
+  border-radius: 10px;
+  padding: 20px;
+  margin-left: 30px;
+  margin-top: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
 .authForm {
   display: flex;
   flex-direction: column;
