Progress on editing courses in-website

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 /* styling for the authentication page */
 
 .box {
-  background-color: #08769b;
+  background-color: #0f95c1;
   border-radius: 10px;
   padding: 20px;
   margin-left: 30px;
