--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -7,11 +7,10 @@
   <div class="indexTopBar">
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
     <h1>Data</h1>
-    <a href="/dataEdit" role="button">Edit Data</a>
+    <a href="/coursesEdit" role="button">Edit Courses</a>
   </div>
   <div class="box">
     <h1>stuff</h1>
-    <select></select>
   </div>
 </main>
 <!-- /Main Site -->
