--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,10 @@
   margin-bottom: 30px;
 }
 
+textarea {
+  resize: none;
+}
+
 .selector {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
