--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,12 @@ textarea {
   resize: none;
 }
 
+.hidden {
+  visibility: hidden;
+  height: 0px;
+  width: 0px;
+}
+
 .selector {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
