--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,19 @@
   margin-bottom: 30px;
 }
 
+.scrollSelector {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  padding: 20px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+
+  max-height: 240px;
+  overflow: auto;
+}
+
 textarea {
   resize: none;
 }
