no more dark mode override

--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -30,10 +30,12 @@
 
     <div class="selector" id="coursePeriods">
       <label>Avaliable Periods:</label>
+      <div class = "periodSelector">
       <% for(let i=1; i <= 8; i++) { %>
         <input type="checkbox" id="<%= 'Period ' + i %>" />
         <label for="<%= 'Period ' + i %>">Period <%= i %></label>
       <% } %>
+      </div>
     </div>
 
     <div class="selector">
