--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Habits of Mind Journal</title>
-    <link rel="stylesheet" href="/css/pico.min.css" />
+    <link rel="stylesheet" href="/css/pico.red.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
     
   </head>
