--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
 
 .box {
   background-color: #c10f0f;
+  color: white;
   border-radius: 10px;
   padding: 20px;
   margin-left: 30px;
@@ -11,7 +12,8 @@
 }
 
 .scrollSelector {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.25);
+  color: white;
   border-radius: 10px;
   padding: 20px;
   margin-left: 10px;
@@ -34,7 +36,8 @@ textarea {
 }
 
 .selector {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.25);
+  color: white;
   border-radius: 10px;
   padding: 20px;
   margin-left: 10px;
@@ -53,6 +56,7 @@ textarea {
 }
 
 .periodSelector {
+  color: white;
   text-align: center;
 }
 
@@ -71,8 +75,9 @@ textarea {
 
 .indexTopBar img {
   flex-shrink: 0;
-  width: 100px;
+  width: 150px;
   height: 100px;
+  margin-left: 30px;
 }
 
 .indexTopBar h1 {
