Working on save/delete

--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -61,8 +61,8 @@
       </div>
     </div>
     <div class="selector">
-      <a role="button">Save Course</a>
-      <a role="button">Delete Course</a>
+      <a role="button" id="saveButton">Save Course</a>
+      <a role="button" id="deleteButton">Delete Course</a>
     </div>
   </div>
 </main>
