Removed FIXME: courseArr no longer throws an error when empty

--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -54,7 +54,7 @@
     <div class = "selector">
       <input type="checkbox" id="priorityOverrideEnabler" /><label style="color: #FFFFFF">Hard Coded Priority</label>
 
-      <div id="sectionSelectorDiv" class="">
+      <div id="prioritySelectorDiv" class="">
         <label class="selector">
         Overridden Priority: <input id="prioritySelector" type="number" min="0" max="1"/>
         </label>    
