--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -8,6 +8,7 @@
     <img src="img/SE-GitHub-image.png" alt="Huskie code logo" />
     <h1>Data</h1>
     <a href="/coursesEdit" role="button">Edit Courses</a>
+    <a href="/classroomsEdit" role="button">Edit Classrooms</a>
   </div>
   <div class="box">
     <h1>stuff</h1>
