--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -29,7 +29,7 @@
     </label>
 
     <div class="selector" id="coursePeriods">
-      <label  style="color: #FFFFFF">Avaliable Periods:</label>
+      <label  style="color: #FFFFFF">Available Periods:</label>
       <div class = "periodSelector">
       <% for(let i=1; i <= 8; i++) { %>
         <div style="display: inline-block; margin-inline: 13px">
