renamed rooms.js into classrooms.js

--- a/views/classroomsEdit.ejs
+++ b/views/classroomsEdit.ejs
@@ -46,7 +46,7 @@
 </main>
 <!-- /Main Site -->
 
-<script src="/js/roomsEdit.js"></script>
+<script src="/js/classroomsEdit.js"></script>
 
 <!-- include footer -->
 <%- include('include/_footer') %>
