--- a/views/classroomsEdit.ejs
+++ b/views/classroomsEdit.ejs
@@ -8,6 +8,7 @@
     <div class="topBarText">Edit Classrooms</div>
     <img src="img/ctelogo.png" alt="CTElogo" />
   </div>
+  <a href="/dataView" class="backButton" role="button">Back</a>
   <div class="box">
     <label class="selector">
       Select Room:
