--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -5,7 +5,7 @@
 <!-- Main Site -->
 <main  style="background-color: #ffffff">
   <div class="courseEditTopBar">
-    <div class = "topBarText">Edit Courses</div>
+    <div class = "topBarText">Edit Courses <a href="/dataView" class="backButton" role="button">Back</a> </div>
     <img src="img/ctelogo.png" alt="CTElogo" />
   </div>
   <div class="box">
