trying to use a flexbox for dataView

--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -10,8 +10,10 @@
     <a href="/coursesEdit" role="button">Edit Courses</a>
     <a href="/classroomsEdit" role="button">Edit Classrooms</a>
   </div>
-  <div class="box">
-    <h1>stuff</h1>
+  <div class="box flex">
+    <div class="column">stufffffffffffffffffffffffffffffffffffff</div>
+    <div class="column">stuffffffffffffffff</div>
+    <div class="column">stuff stuffffffffffffffffffffffffffffffffffff</div>
   </div>
 </main>
 <!-- /Main Site -->
