--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,10 +9,26 @@
   color: white;
   border-radius: 10px;
   padding: 20px;
+  margin: 30px;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.column {
+  float: inline-start;
+  width: 30%;
+
+  background-color: var(--bc);
+  color: white;
+  border-radius: 10px;
+  padding: 20px;
   margin-left: 30px;
   margin-top: 30px;
   margin-right: 30px;
-  margin-bottom: 30px;
 }
 
 .backButton {
