--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -20,7 +20,7 @@
       <% } %>
       </div>
       <div class="buttonHolder">
-        <a href="/coursesEdit" role="button" class="box" style="margin: 5px">Edit Courses</a>
+        <a href="/classroomsEdit" role="button" class="box" style="margin: 5px">Edit Classrooms</a>
       </div>
     </div>
     <div class="box2 flexItem">
