--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,15 @@
   flex-basis: 30%;
 }
 
+.filter {
+  width: calc(100% - 20px);
+  border-radius: 0px 0px 10px 10px;
+  margin: 0px 20px 10px 10px;
+  padding: 20px;
+  background-color: white;
+  font-size: 20px;
+}
+
 .collapsible {
   background-color: var(--bc);
   color: white;
@@ -93,10 +102,7 @@
   color: white;
   border-radius: 10px;
   padding: 20px;
-  margin-left: 10px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin: 0px 10px;
 
   max-height: 360px;
   overflow: auto;
