--- a/views/classroomsEdit.ejs
+++ b/views/classroomsEdit.ejs
@@ -2,6 +2,7 @@
 <%- include('include/_header') %>
 <!-- /include header -->
 
+<% classrooms.sort((a, b) => (a.roomNum > b.roomNum) ? 1 : -1) %>
 <!-- Main Site -->
 <main style="background-color: #ffffff">
   <div class="classroomsEditTopBar">
