--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -23,7 +23,7 @@
       </div>
       <textarea class="filter" id="classFilter" rows="1" placeholder="🔎︎ Search"></textarea>
       <div class="buttonHolder">
-        <a href="/classroomsEdit" role="button" class="box" style="margin: 5px">Edit Classrooms</a>
+        <a href="/classroomsEdit" role="button" class="buttonBox" style="margin: 5px">Edit Classrooms</a>
       </div>
     </div>
 
@@ -44,7 +44,7 @@
       </div>
       <textarea class="filter" id="classFilter" rows="1" placeholder="🔎︎ Search"></textarea>
       <div class="buttonHolder">
-        <a href="/coursesEdit" role="button" class="box" style="margin: 5px">Edit Courses</a>
+        <a href="/coursesEdit" role="button" class="buttonBox" style="margin: 5px">Edit Courses</a>
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       </div>
       <textarea class="filter" id="classFilter" rows="1" placeholder="🔎︎ Search"></textarea>
       <div class="buttonHolder">
-        <a href="/coursesEdit" role="button" class="box" style="margin: 5px">Edit Teachers</a>
+        <a href="/coursesEdit" role="button" class="buttonBox" style="margin: 5px">Edit Teachers</a>
       </div>
     </div>
 
