--- a/views/classroomsEdit.ejs
+++ b/views/classroomsEdit.ejs
@@ -23,7 +23,8 @@
   </div>
   <div class="box">
     <label class="box2">
-      Room Name/Number: <textarea id="namer" rows="1">Room Name</textarea>
+      Room Name/Number:
+      <textarea id="namer" rows="1" placeholder="Room Number"></textarea>
     </label>
 
     <div class="box2" id="coursePeriods">
