--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -21,7 +21,7 @@
   </div>
   <div class="box">
     <label class="box2">
-      Course Name: <textarea id="namer" rows="1">Course Name</textarea>
+      Course Name: <textarea id="namer" rows="1" placeholder="Course Name"></textarea>
     </label>
 
     <label class="box2">
