--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,7 +122,7 @@
   color: white;
   border-radius: 10px;
   padding: 20px;
-  margin: 0px 10px;
+  margin: 10px 10px 0px 10px;
 
   max-height: 360px;
   overflow: auto;
@@ -136,6 +136,8 @@ textarea {
   visibility: hidden;
   height: 0px;
   width: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .hiddenButton {
