--- a/views/dataView.ejs
+++ b/views/dataView.ejs
@@ -11,11 +11,12 @@
   <div class="box flexBox">
 
     <div class="box2 flexItem">
-      <h1>Classrooms</h1>
+      <h1>Classrooms <%=myVar%></h1>
+      Count: <p style="display:inline" id="classroomsCount"><%=classrooms.length%></p>
       <% classrooms.sort((a, b) => (a.roomNum > b.roomNum) ? 1 : -1) %>
       <div class="scrollSelector" style="max-height: 500px; min-height: 500px; border-radius: 10px 10px 0px 0px;">
       <% for(let i=0; i < classrooms.length; i++) { %>
-        <button class="collapsible"><%= classrooms[i].roomNum %></button>
+        <button class="collapsible" id="viewClassrooms<%=i%>"><%= classrooms[i].roomNum %></button>
         <div class="contentCollapsible">
           <b>Periods Available:</b><%= classrooms[i].periodsAvailable.map((item) => (item = " "+item))%>
         </div>
@@ -42,7 +43,7 @@
         </div>
       <% } %>
       </div>
-      <textarea class="filter" id="classFilter" rows="1" placeholder="🔎︎ Search"></textarea>
+      <textarea class="filter" id="courseFilter" rows="1" placeholder="🔎︎ Search"></textarea>
       <div class="buttonHolder">
         <a href="/coursesEdit" role="button" class="buttonBox" style="margin: 5px">Edit Courses</a>
       </div>
@@ -58,9 +59,9 @@
         </div>
       <% } %>
       </div>
-      <textarea class="filter" id="classFilter" rows="1" placeholder="🔎︎ Search"></textarea>
+      <textarea class="filter" id="teacherFilter" rows="1" placeholder="🔎︎ Search"></textarea>
       <div class="buttonHolder">
-        <a href="/coursesEdit" role="button" class="buttonBox" style="margin: 5px">Edit Teachers</a>
+        <a href="/teachersEdit" role="button" class="buttonBox" style="margin: 5px">Edit Teachers</a>
       </div>
     </div>
 
