--- a/views/classroomsEdit.ejs
+++ b/views/classroomsEdit.ejs
@@ -6,10 +6,10 @@
 <!-- Main Site -->
 <main style="background-color: #ffffff">
   <div class="classroomsEditTopBar">
-    <div class="topBarText">Edit Classrooms</div>
+    <div class="topBarText">Edit Classrooms <a href="/dataView" class="backButton" role="button">Back</a>
+    </div>
     <img src="img/ctelogo.png" alt="CTElogo" />
   </div>
-  <a href="/dataView" class="backButton" role="button">Back</a>
   <div class="box">
     <label class="box2">
       Select Room:
