everything still hurts

--- a/views/teachersEdit.ejs
+++ b/views/teachersEdit.ejs
@@ -6,7 +6,7 @@
 <main style="background-color: #ffffff">
   <div class="courseEditTopBar">
     <div class="topBarText">
-      Edit Classrooms
+      Edit Teachers
       <a href="/dataView" class="backButton" role="button">Back</a>
     </div>
     <img src="img/ctelogo.png" alt="CTElogo" />
