--- a/views/coursesEdit.ejs
+++ b/views/coursesEdit.ejs
@@ -52,7 +52,7 @@
     </div>
 
     <div class = "box2">
-      <input type="checkbox" id="priorityOverrideEnabler" /><label style="color: #FFFFFF">Hard Coded Priority</label>
+      <input type="checkbox" id="priorityOverrideEnabler" /><label style="color: #FFFFFF">Hard Coded Priority (Now Deprecated)</label>
 
       <div id="prioritySelectorDiv" class="">
         <label class="box2">
